Updated navbar to fix scrolling overlap issue

--- a/_sass/port-theme/_pagenav.scss
+++ b/_sass/port-theme/_pagenav.scss
@@ -7,6 +7,8 @@
     left: 0;
     padding-top: .6rem;
     padding-bottom: 1rem;
+    background-image: $hashed-background;
+    
     #up-btn {
         display: none;
     }
@@ -17,9 +19,8 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 60px;
+        height: 4.224rem;
         z-index: 100;
-        background-image: $hashed-background;
 
         @media (max-width: 700px) {
             padding: .25rem 0;
@@ -59,20 +60,18 @@
                 background: none;
             }
             a {
-                @include transition (all 0.4s ease-in-out);
+                // @include transition (all 0.4s ease-in-out);
                 position: relative;
                 font-family: Raleway, sans-serif;
                 font-weight: 600;
                 text-decoration: none;                
                 color: $text-color;
                 padding: inherit;
-                z-index: 100;
                 &:after {
-                    @include transition (all 0.4s ease-in-out);   
-                    z-index: 10;  
+                    // @include transition (all 0.4s ease-in-out);     
                     content: "";
                     position: absolute;
-                    top: 1.6rem;
+                    top: 1.5rem;
                     left: 7.5%;
                     height: .2rem;
                     width: 85%;
